--- a/angular01/views/board.ejs
+++ b/angular01/views/board.ejs
@@ -73,15 +73,30 @@
 
                             <div class="col-md-12">
                                 <ul class="pagination pagination-sm pull-right" style="margin: 0 0; font-weight: bold;">
-                                    <li><a href="#"><i class="fa fa-fw fa-angle-double-left"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-fw fa-angle-left"></i></a></li>
-                                    <li class="active"><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li><a href="#"><i class="fa fa-fw fa-angle-right"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-fw fa-angle-double-right"></i></a></li>
+                                    <li ng-if="pageNo != 1">
+                                        <a href="#" ng-click="showFirstPage()">
+                                            <i class="fa fa-fw fa-angle-double-left"></i>
+                                        </a>
+                                    </li>
+                                    <li ng-if="beginPage != 1">
+                                        <a href="#" ng-click="showPreviousPage()">
+                                            <i class="fa fa-fw fa-angle-left"></i>
+                                        </a>
+                                    </li>
+                                    <li ng-repeat="i in range(beginPage, endPage + 1)">
+                                        <a style="background-color: #afd9ee" href="#" pageNo="{{i}}" ng-if="i == pageNo" ng-click="pageChange($event)">{{i}}</a>
+                                        <a href="#" pageNo="{{i}}" ng-if="i != pageNo" ng-click="pageChange($event)">{{i}}</a>
+                                    </li>
+                                    <li ng-if="endPage != lastPage">
+                                        <a href="#" ng-click="showNextPage()">
+                                            <i class="fa fa-fw fa-angle-right"></i>
+                                        </a>
+                                    </li>
+                                    <li ng-if="pageNo != lastPage">
+                                        <a href="#" ng-click="showLastPage()">
+                                            <i class="fa fa-fw fa-angle-double-right"></i>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
