--- a/angular01/views/board.ejs
+++ b/angular01/views/board.ejs
@@ -59,7 +59,8 @@
                                             <i class="fa fa-file-o pull-left"></i>
                                             <span class="number pull-right"># {{board.bno}}</span>
                                             <div class="media-body">
-                                                <div class="btitle">{{board.btitle}}</div>
+                                                <div class="btitle" style="cursor:pointer;" bno="{{board.bno}}" ng-click="detail($event)"
+                                                     data-toggle="modal" data-target="#detailPostModal">{{board.btitle}}</div>
                                                 <p class="info">
                                                     {{board.bwriter}}
                                                     <strong> /</strong>
@@ -155,7 +156,7 @@
                         </div>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" maxlength="50"
-                                   required="required" placeholder="NICKNAME", ng-model="formData.bwriter">
+                                   required="required" placeholder="NICKNAME" ng-model="formData.bwriter">
                         </div>
                     </div>
                     <div class="form-group">
@@ -185,6 +186,96 @@
     </div>
 </div>
 
+<!-- Detail Post Modal -->
+<div class="modal fade fileDrop" id="detailPostModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="file-drag"></div>
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-hidden="true">×
+                </button>
+                <h1 class="modal-title text-center">
+                    <i class="fa fa-fw fa-pencil"></i>POST DETAIL
+                </h1>
+            </div>
+            <div class="modal-body col-sm-10 col-sm-offset-1">
+                <form class="form-horizontal" role="form">
+                    <input type="hidden" ng-model="detailBoardBno">
+                    <div class="form-group">
+                        <div class="col-sm-3 text-right" style="font-size: 12px;">
+                            <label class="control-label">
+                                <i class="fa fa-fw fa-lg fa-magic"></i>TITLE
+                            </label>
+                        </div>
+                        <div class="col-sm-9">
+                            <input type="text" id="editBtitle" class="form-control" maxlength="50"
+                                   required="required" ng-model="detailBoardBtitle" ng-readonly="readonly">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-3 text-right" style="font-size: 12px;">
+                            <label class="control-label">
+                                <i class="fa fa-fw fa-lg fa-align-right"></i>CONTENT
+                            </label>
+                        </div>
+                        <div class="col-sm-9">
+                            <textarea id="editBcontent" class="form-control" required="required"
+                                      rows="7" ng-model="detailBoardBcontent" ng-readonly="readonly"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group" id="boardPwdDiv" style="display: none;">
+                        <div class="col-sm-3 text-right" style="font-size: 12px;">
+                            <label class="control-label">
+                                <i class="fa fa-fw fa-lg fa-lock"></i>PASSWORD
+                            </label>
+                        </div>
+                        <div class="col-sm-9">
+                            <input type="password" class="form-control" maxlength="50"
+                                   required="required" placeholder="PASSWORD" ng-model="formData.bpassword">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-12" style="font-size: 14px;">
+                            <label class="col-sm-8 control-label">
+                                <i class="fa fa-fw fa-lg fa-user"></i>NICKNAME :
+                            </label>
+                            <label class="col-sm-4 control-label">
+                                <i class="text-left" style="color: #4374D9">{{detailBoardBwriter}}</i>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-12" style="font-size: 14px;">
+                            <label class="col-sm-8 control-label">
+                                <i class="fa fa-fw fa-clock-o"></i>POSTED DATE :
+                            </label>
+                            <label class="col-sm-4 control-label">
+                                <i style="color: #4374D9">{{detailBoardBregDate}}</i>
+                            </label>
+                        </div>
+                    </div><hr>
+
+                    <div style="float:right;">
+                        <button id="detailCloseBtn" class="btn btn-default" data-dismiss="modal">CLOSE</button>
+                        <button class="btn btn-success" type="button" ng-click="editBoard()" id="editBtn">
+                            <i class="fa fa-fw fa-edit"></i>EDIT
+                        </button>
+                        <button class="btn btn-success" type="submit" id="modifyBtn"
+                                ng-click="modifyBoard()" style="display: none;">
+                            <i class="fa fa-fw fa-floppy-o"></i>MODIFY
+                        </button>
+                        <button class="btn btn-danger" type="button" id="deleteBtn"
+                                ng-click="deleteBoard()" style="display: none;">
+                            <i class="fa fa-fw fa-trash"></i>DELETE
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer" style="border: 0px;"></div>
+        </div>
+    </div>
+</div>
 
 <%- include("footer.ejs") %>
 
@@ -192,8 +283,5 @@
 <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
 <script src="/libs/angular/angular.js"></script>
 <script src="/javascripts/controller/board.js"></script>
-<!--<script src="/js/board/list.js"></script>-->
-<!--<script src="/js/board/modal/regist.js"></script>-->
-
 </body>
 </html>
