--- a/angular01/views/board.ejs
+++ b/angular01/views/board.ejs
@@ -125,7 +125,7 @@
                 </h1>
             </div>
             <div class="modal-body col-sm-10 col-sm-offset-1">
-                <form class="form-horizontal" role="form">
+                <form class="form-horizontal" role="form" ng-submit="boardRegist()">
                     <div class="form-group">
                         <div class="col-sm-3 text-right" style="font-size: 12px;">
                             <label class="control-label">
@@ -166,8 +166,9 @@
                             </label>
                         </div>
                         <div class="col-sm-9">
-                                <input type="password" class="form-control" maxlength="50"
-                                       required="required" placeholder="PASSWORD" ng-model="formData.bpassword">
+                            <input type="password" class="form-control" maxlength="50"
+                                   pattern=".{4,}" title="At least 4 characters"
+                                   required="required" placeholder="PASSWORD" ng-model="formData.bpassword">
                         </div>
                     </div>
 
@@ -175,7 +176,7 @@
 
                     <div style="float:right;">
                         <button class="btn btn-default" data-dismiss="modal">CLOSE</button>
-                        <button class="btn btn-primary" type="submit" ng-click="boardRegist()">
+                        <button class="btn btn-primary" type="submit">
                             <i class="fa fa-fw fa-floppy-o"></i>REGIST
                         </button>
                     </div>
@@ -200,7 +201,7 @@
                 </h1>
             </div>
             <div class="modal-body col-sm-10 col-sm-offset-1">
-                <form class="form-horizontal" role="form">
+                <form class="form-horizontal" role="form" ng-submit="modifyBoard()">
                     <input type="hidden" ng-model="detailBoardBno">
                     <div class="form-group">
                         <div class="col-sm-3 text-right" style="font-size: 12px;">
@@ -261,8 +262,7 @@
                         <button class="btn btn-success" type="button" ng-click="editBoard()" id="editBtn">
                             <i class="fa fa-fw fa-edit"></i>EDIT
                         </button>
-                        <button class="btn btn-success" type="submit" id="modifyBtn"
-                                ng-click="modifyBoard()" style="display: none;">
+                        <button class="btn btn-success" type="submit" id="modifyBtn" style="display: none;">
                             <i class="fa fa-fw fa-floppy-o"></i>MODIFY
                         </button>
                         <button class="btn btn-danger" type="button" id="deleteBtn"
